[package]
name = "kvs_poc"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "kvs"
path = "src/server.rs"
doc = false

[[bin]]
name = "kvc"
path = "src/client.rs"
doc = false

[dependencies]
bytes = "1" # 高效处理网络 buffer 的库
dashmap = "6" # 并发 HashMap
http = "1" # 我们使用 HTTP status code 所以引入这个类型库
prost = "0.9" # 处理 protobuf 的代码
thiserror = "2" # 错误定义和处理
tracing = "0.1" # 日志处理
sled = "0.34.7"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "io-util", "macros", "net", "fs" ] } # 异步网络库
flate2 = "1.1.1"
tokio-util = { version = "0.7", features = ["codec"] }
anyhow = "1" # 错误处理
tracing-subscriber = "0.3" # 日志处理
# tokio-rustls = "0.26"
tokio-rustls = "0.22"
rustls-native-certs = "0.5"
futures = "0.3.21" # 提供 Stream trait



[dev-dependencies]
async-prost = "0.3" # 支持把 protobuf 封装成 TCP frame
tempfile = "3.19"
certify = "0.6"


[build-dependencies]
prost-build = "0.9" # 编译 protobuf
